Error Boundry and styling

--- a/react-complete-guide/src/App.css
+++ b/react-complete-guide/src/App.css
@@ -9,4 +9,27 @@
 .bold{
   font-weight: bold;
 }
+.button{
+  background-color:green;
+ color:white;
+ font:inherit;
+ border:1px solid blue;
+ padding:8px;
+ cursor:pointer;
+ margin-bottom: 16px;
+}
 
+.button:hover{
+  background-color:lightgreen;
+  color:black;
+}
+
+.button.red{
+  background-color: red;
+
+}
+
+.button.red:hover{
+  background-color: salmon;
+  
+}
